--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,16 @@
                 </div>
 
                 <div class="d-flex align-items-center gap-2">
-                    <a href="{{ url_for('login') }}" class="btn btn-minimal">
-                    <i class="bi bi-person"></i>
+
+                  {% if current_user.is_authenticated %}
+                    <a href="{{ url_for('profile') }}" class="btn btn-minimal">
+                      <i class="bi bi-person"></i>
                     </a>
+                  {% else %}
+                    <a href="{{ url_for('login') }}" class="btn btn-minimal">
+                      <i class="bi bi-person"></i>
+                    </a>
+                    {% endif %}
                     <button class="btn btn-minimal position-relative" data-bs-toggle="offcanvas" data-bs-target="#cartOffcanvas">
                         <i class="bi bi-bag"></i>
                         <span class="cart-badge" id="cartCount">0</span>
