--- a/templates/login.html
+++ b/templates/login.html
@@ -12,6 +12,11 @@
         <label for="password" class="form-label">Password</label>
         <input type="password" class="form-control" id="password" name="password" required>
       </div>
+      <div class="mb-4">
+      {% if error %}
+        <div class="alert alert-danger" >{{ error }}</div>
+      {% endif %}
+        </div>
       <button type="submit" class="btn btn-dark w-100">Login</button>
       <p class="mt-3 text-center">
         Don’t have an account? <a href="{{ url_for('register') }}" class="text-decoration-none">Register</a>
