--- a/templates/login.html
+++ b/templates/login.html
@@ -3,28 +3,38 @@
 <div class="container d-flex justify-content-center mt-5">
   <div class="col-md-5">
     <h3 class="text-center mb-4">Login</h3>
-    <form method="POST" action="/login">
+    <form method="POST">
+      {{ form.hidden_tag() }}
+
       <div class="mb-3">
-        <label for="email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+        {{ form.email.label }}
+        {{ form.email(class="form-control") }}
       </div>
-      <div class="mb-4">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
+      <div class="mb-3">
+        {{ form.password.label }}
+        {{ form.password(class="form-control") }}
       </div>
-      <div class="mb-4">
-      {% if error %}
-        <div class="alert alert-danger" >{{ error }}</div>
-      {% endif %}
+      <div class="mb-3">
+      {{ form.recaptcha }}
+      {% for error in form.recaptcha.errors %}
+        <div class="text-danger">{{ error }}</div>
+      {% endfor %}
         </div>
+
       <button type="submit" class="btn btn-dark w-100">Login</button>
+
+      {% if error %}
+        <div class="alert alert-danger mt-3">{{ error }}</div>
+      {% endif %}
+    </form>
+
       <p class="mt-3 text-center">
         Don’t have an account? <a href="{{ url_for('register') }}" class="text-decoration-none">Register</a>
       </p>
        <p class="mt-3 text-center">
         Staff? <a href="{{ url_for('stafflogin') }}" class="text-decoration-none">Staff Login</a>
       </p>
-    </form>
   </div>
 </div>
 {% endblock %}
+
