--- a/templates/login.html
+++ b/templates/login.html
@@ -10,31 +10,41 @@
         {{ form.email.label }}
         {{ form.email(class="form-control") }}
       </div>
+
       <div class="mb-3">
         {{ form.password.label }}
         {{ form.password(class="form-control") }}
       </div>
+
       <div class="mb-3">
-      {{ form.recaptcha }}
-      {% for error in form.recaptcha.errors %}
-        <div class="text-danger">{{ error }}</div>
-      {% endfor %}
-        </div>
+        {{ form.recaptcha }}
+        {% for error in form.recaptcha.errors %}
+          <div class="text-danger">{{ error }}</div>
+        {% endfor %}
+      </div>
 
       <button type="submit" class="btn btn-dark w-100">Login</button>
 
       {% if error %}
         <div class="alert alert-danger mt-3">{{ error }}</div>
       {% endif %}
-    </form>
 
-      <p class="mt-3 text-center">
-        Don’t have an account? <a href="{{ url_for('register') }}" class="text-decoration-none">Register</a>
-      </p>
-       <p class="mt-3 text-center">
-        Staff? <a href="{{ url_for('stafflogin') }}" class="text-decoration-none">Staff Login</a>
-      </p>
+      {% if message == 'logged_out' %}
+        <div class="alert alert-info mt-3">You have been logged out.</div>
+      {% elif message == 'timeout' %}
+        <div class="alert alert-warning mt-3">
+          You were logged out due to inactivity. Please log in again.
+        </div>
+      {% endif %}
+
+
+
+    <p class="mt-3 text-center">
+      Don’t have an account? <a href="{{ url_for('register') }}" class="text-decoration-none">Register</a>
+    </p>
+    <p class="mt-1 text-center">
+      Staff? <a href="{{ url_for('stafflogin') }}" class="text-decoration-none">Staff Login</a>
+    </p>
   </div>
 </div>
 {% endblock %}
-
