--- a/templates/register.html
+++ b/templates/register.html
@@ -4,19 +4,19 @@
   <div class="col-md-5">
     <h3 class="text-center mb-4">Register</h3>
     <form method="POST" action="/register">
-      <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
-        <input type="text" class="form-control" id="username" name="username" required>
-      </div>
+<!--      <div class="mb-3">-->
+<!--        <label for="username" class="form-label">Username</label>-->
+<!--        <input type="text" class="form-control" id="username" name="username" required>-->
+<!--      </div>-->
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input type="email" class="form-control" id="email" name="email" required>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-      </div>
-      <button type="submit" class="btn btn-dark w-100">Register</button>
+<!--      <div class="mb-3">-->
+<!--        <label for="password" class="form-label">Password</label>-->
+<!--        <input type="password" class="form-control" id="password" name="password" required>-->
+<!--      </div>-->
+      <button type="submit" class="btn btn-dark w-100">Continue</button>
       <p class="mt-3 text-center">
         Already have an account? <a href="login" class="text-decoration-none">Login</a>
       </p>
