--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -8,7 +8,7 @@
 
       <div class="mb-3">
         {{ form.otp.label(class="form-label") }}
-        {{ form.otp(class="form-control", placeholder="Enter 6-digit code") }}
+        {{ form.otp(class="form-control", placeholder="Enter 6-digit code", pattern="\d*", inputmode="numeric") }}
       </div>
 
       <div class="mb-3">
@@ -53,5 +53,21 @@
   }
   makeToggle('resetNewPassword', 'toggleResetNew');
   makeToggle('resetConfirmPassword', 'toggleResetConfirm');
+
+
 </script>
+<script>
+  const otpField = document.querySelector('[name="{{ form.otp.name }}"]');
+  if (otpField) {
+    otpField.addEventListener('keypress', (e) => {
+      if (!/[0-9]/.test(e.key)) {
+        e.preventDefault();
+      }
+    });
+    otpField.addEventListener('input', () => {
+      otpField.value = otpField.value.replace(/\D/g, '');
+    });
+  }
+</script>
+
 {% endblock %}
