--- a/templates/base.html
+++ b/templates/base.html
@@ -61,27 +61,27 @@
     </div>
   </nav>
 
-  <!-- Flash messages -->
-  <div class="container mt-3">
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    {% for category, message in messages %}
-    <div
-      class="alert alert-{{ category }} alert-dismissible fade show"
-      role="alert"
-    >
-      {{ message }}
-      <button
-        type="button"
-        class="btn-close"
-        data-bs-dismiss="alert"
-        aria-label="Close"
-      ></button>
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-  </div>
+<!--  &lt;!&ndash; Flash messages &ndash;&gt;-->
+<!--  <div class="container mt-3">-->
+<!--    {% with messages = get_flashed_messages(with_categories=true) %}-->
+<!--    {% if messages %}-->
+<!--    {% for category, message in messages %}-->
+<!--    <div-->
+<!--      class="alert alert-{{ category }} alert-dismissible fade show"-->
+<!--      role="alert"-->
+<!--    >-->
+<!--      {{ message }}-->
+<!--      <button-->
+<!--        type="button"-->
+<!--        class="btn-close"-->
+<!--        data-bs-dismiss="alert"-->
+<!--        aria-label="Close"-->
+<!--      ></button>-->
+<!--    </div>-->
+<!--    {% endfor %}-->
+<!--    {% endif %}-->
+<!--    {% endwith %}-->
+<!--  </div>-->
 
   <!-- Cart Offcanvas -->
   <div
@@ -123,7 +123,7 @@
   <script>
     (function () {
       // 30-minute timeout for inactivity
-      const idleSeconds = 30;
+      const idleSeconds = 1800;
       let idleTimer;
       const resetTimer = () => {
         clearTimeout(idleTimer);
