--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -10,6 +10,9 @@
         {{ form.otp.label(class="form-label") }}
         {{ form.otp(class="form-control", placeholder="Enter 6-digit code", pattern="\d*", inputmode="numeric") }}
       </div>
+      <p class="text-center mt-3">
+        Didn’t receive code? <a href="{{ url_for('resend_reset_otp') }}">Resend OTP</a>
+      </p>
 
       <div class="mb-3">
         {{ form.new_password.label(class="form-label") }}
