requirements.txt updated

--- a/templates/security.html
+++ b/templates/security.html
@@ -28,7 +28,7 @@
         {% if current_user.two_factor_enabled %}
           <button type="submit" class="btn btn-outline-warning">Disable 2FA</button>
         {% else %}
-          <button type="submit" class="btn btn-outline-success">Enable 2FA</button>
+          <button type="submit" class="btn btn-outline-success">Enable 2FA (Secure)</button>
         {% endif %}
       </form>
     </div>
