--- a/templates/base.html
+++ b/templates/base.html
@@ -61,28 +61,6 @@
     </div>
   </nav>
 
-<!--  &lt;!&ndash; Flash messages &ndash;&gt;-->
-<!--  <div class="container mt-3">-->
-<!--    {% with messages = get_flashed_messages(with_categories=true) %}-->
-<!--    {% if messages %}-->
-<!--    {% for category, message in messages %}-->
-<!--    <div-->
-<!--      class="alert alert-{{ category }} alert-dismissible fade show"-->
-<!--      role="alert"-->
-<!--    >-->
-<!--      {{ message }}-->
-<!--      <button-->
-<!--        type="button"-->
-<!--        class="btn-close"-->
-<!--        data-bs-dismiss="alert"-->
-<!--        aria-label="Close"-->
-<!--      ></button>-->
-<!--    </div>-->
-<!--    {% endfor %}-->
-<!--    {% endif %}-->
-<!--    {% endwith %}-->
-<!--  </div>-->
-
   <!-- Cart Offcanvas -->
   <div
     class="offcanvas offcanvas-end"
@@ -137,6 +115,13 @@
       resetTimer();
     })();
   </script>
+  <script>
+  var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+  tooltipTriggerList.forEach(function (tooltipTriggerEl) {
+    new bootstrap.Tooltip(tooltipTriggerEl)
+  });
+</script>
+
   {% endif %}
 </body>
 </html>
