--- a/templates/force_password_reset.html
+++ b/templates/force_password_reset.html
@@ -5,7 +5,7 @@
     <div class="col-md-6">
       <div class="card shadow-sm">
         <div class="card-header bg-dark text-white">
-          <h3 class="mb-0">Change Password</h3>
+          <h3 class="mb-0">Your password has expired. Please create a new one/<h3>
         </div>
         <div class="card-body">
           <form method="POST">
