--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,6 +15,14 @@
         <th>Email</th>
         <td>{{ current_user.email }}</td>
       </tr>
+      <tr>
+        <th>Phone</th>
+        <td>{{ current_user.phone }}</td>
+      </tr>
+      <tr>
+        <th>Birthdate</th>
+        <td>{{ current_user.birthdate }}</td>
+      </tr>
     </table>
   </div>
 </div>
