--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -71,14 +71,17 @@
       otpField.value = otpField.value.replace(/\D/g, '');
     });
   }
+
+
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.4.2/zxcvbn.js"></script>
 <script>
-  const passwordInput = document.querySelector('#{{ form.password.id }}');
+  const passwordInput = document.querySelector('#{{ form.new_password.id }}');
   const feedbackBox = document.createElement('small');
-  passwordInput.parentNode.appendChild(feedbackBox);
-
+  feedbackBox.classList.add('form-text');  // Bootstrap styling (optional)
+  document.querySelector('#newPassword').closest('.mb-3').appendChild(feedbackBox);
   let debounceTimer;
+
 
   passwordInput.addEventListener('input', () => {
     clearTimeout(debounceTimer);
